tests/neg-custom-args/captures/mut-iterator4.check
-- Error: tests/neg-custom-args/captures/mut-iterator4.scala:9:26 ------------------------------------------------------
9 |    update def next() = f(Iterator.this.next()) // error
  |                          ^^^^^^^^^^^^^
  |                          Read-only method map accesses exclusive capability `Iterator.this`;
  |                          method map should be declared an update method to allow this.
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/mut-iterator4.scala:21:77 --------------------------------
21 |def mappedIterator[T, U](it: Iterator[T]^, f: T => U): Iterator[U]^{it, f} = new Iterator: // error
   |                                                                             ^
   |Found:    Iterator[U^'s1]^{it.rd, f, it, any}
   |Required: Iterator[U]^{it, f}
   |
   |Note that capability `any` cannot flow into capture set {it, f}.
   |
   |where:    any is a root capability created in method mappedIterator when constructing instance Object with (Iterator[U]^{any².rd}) {...}
   |
22 |  def hasNext = it.hasNext
23 |  update def next() = f(it.next())
   |
   | longer explanation available when compiling with `-explain`
